3rd year/2nd semester/Comp/xpl/xpl_parser.output
   0  $accept : file $end

   1  file : listdecl
   2       |

   3  listdecl : decl
   4           | listdecl decl

   5  decl : vblockdecl
   6       | fdecl

   7  listvblockdecl : vblockdecl
   8                 | listvblockdecl vblockdecl

   9  vblockdecl : vdecl ';'

  10  vdecl : tPUBLIC type tIDENTIFIER
  11        | type tIDENTIFIER
  12        | tUSE type tIDENTIFIER
  13        | tPUBLIC type tIDENTIFIER '=' expr
  14        | type tIDENTIFIER '=' expr
  15        | tUSE type tIDENTIFIER '=' expr

  16  type : tINT
  17       | tSTR
  18       | tREALTEXT
  19       | '[' type ']'

  20  listinstr : instr
  21            | listinstr instr

  22  instr : expr ';'
  23        | expr '!'
  24        | expr tPRINTLN
  25        | tNEXT
  26        | tSTOP
  27        | tRETURN
  28        | condinstr
  29        | iter
  30        | block

  31  condinstr : tIF '(' expr ')' instr
  32            | tIF '(' expr ')' instr elsif

  33  elsif : tELSIF '(' expr ')' instr
  34        | tELSIF '(' expr ')' instr elsif
  35        | tELSE instr

  36  iter : tWHILE '(' expr ')' instr
  37       | tSWEEP '+' '(' lval ':' expr ':' expr ')' instr
  38       | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' instr
  39       | tSWEEP '-' '(' lval ':' expr ':' expr ')' instr
  40       | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' instr

  41  block : '{' listvblockdecl listinstr '}'
  42        | '{' listvblockdecl '}'
  43        | '{' listinstr '}'
  44        | '{' '}'

  45  fdecl : type tIDENTIFIER '(' fargs ')'
  46        | tPUBLIC type tIDENTIFIER '(' fargs ')'
  47        | tUSE type tIDENTIFIER '(' fargs ')'
  48        | tPROCEDURE tIDENTIFIER '(' fargs ')'
  49        | tPUBLIC tPROCEDURE tIDENTIFIER '(' fargs ')'
  50        | tUSE tPROCEDURE tIDENTIFIER '(' fargs ')'
  51        | type tIDENTIFIER '(' fargs ')' block
  52        | tPUBLIC type tIDENTIFIER '(' fargs ')' block
  53        | tPROCEDURE tIDENTIFIER '(' fargs ')' block
  54        | tPUBLIC tPROCEDURE tIDENTIFIER '(' fargs ')' block
  55        | type tIDENTIFIER '(' fargs ')' '=' literal block
  56        | tPUBLIC type tIDENTIFIER '(' fargs ')' '=' literal block

  57  literal : tINTEGER
  58          | lstring
  59          | tREAL
  60          | tNULL

  61  lstring : tSTRING
  62          | lstring tSTRING

  63  expr : literal
  64       | '-' expr
  65       | '+' expr
  66       | expr '+' expr
  67       | expr '-' expr
  68       | expr '*' expr
  69       | expr '/' expr
  70       | expr '%' expr
  71       | expr '<' expr
  72       | expr '>' expr
  73       | expr '&' expr
  74       | expr '|' expr
  75       | '~' expr
  76       | expr tGE expr
  77       | expr tLE expr
  78       | expr tNE expr
  79       | expr tEQ expr
  80       | '@'
  81       | '(' expr ')'
  82       | '[' expr ']'
  83       | lval
  84       | lval '?'
  85       | lval '=' expr
  86       | funcinvoc

  87  funcinvoc : tIDENTIFIER '(' fargsinvo ')'
  88            | tIDENTIFIER '(' ')'

  89  fargsinvo : expr
  90            | fargsinvo ',' expr

  91  lval : tIDENTIFIER
  92       | expr '[' expr ']'

  93  fargs : args
  94        |

  95  args : arg
  96       | args ',' arg

  97  arg : type tIDENTIFIER

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tINT  shift 1
	tREALTEXT  shift 2
	tPROCEDURE  shift 3
	tSTR  shift 4
	tPUBLIC  shift 5
	tUSE  shift 6
	'['  shift 7
	$end  reduce 2

	file  goto 8
	decl  goto 9
	vdecl  goto 10
	fdecl  goto 11
	vblockdecl  goto 12
	listdecl  goto 13
	type  goto 14


state 1
	type : tINT .  (16)

	.  reduce 16


state 2
	type : tREALTEXT .  (18)

	.  reduce 18


state 3
	fdecl : tPROCEDURE . tIDENTIFIER '(' fargs ')'  (48)
	fdecl : tPROCEDURE . tIDENTIFIER '(' fargs ')' block  (53)

	tIDENTIFIER  shift 15
	.  error


state 4
	type : tSTR .  (17)

	.  reduce 17


state 5
	vdecl : tPUBLIC . type tIDENTIFIER  (10)
	vdecl : tPUBLIC . type tIDENTIFIER '=' expr  (13)
	fdecl : tPUBLIC . type tIDENTIFIER '(' fargs ')'  (46)
	fdecl : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fargs ')'  (49)
	fdecl : tPUBLIC . type tIDENTIFIER '(' fargs ')' block  (52)
	fdecl : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fargs ')' block  (54)
	fdecl : tPUBLIC . type tIDENTIFIER '(' fargs ')' '=' literal block  (56)

	tINT  shift 1
	tREALTEXT  shift 2
	tPROCEDURE  shift 16
	tSTR  shift 4
	'['  shift 7
	.  error

	type  goto 17


state 6
	vdecl : tUSE . type tIDENTIFIER  (12)
	vdecl : tUSE . type tIDENTIFIER '=' expr  (15)
	fdecl : tUSE . type tIDENTIFIER '(' fargs ')'  (47)
	fdecl : tUSE . tPROCEDURE tIDENTIFIER '(' fargs ')'  (50)

	tINT  shift 1
	tREALTEXT  shift 2
	tPROCEDURE  shift 18
	tSTR  shift 4
	'['  shift 7
	.  error

	type  goto 19


state 7
	type : '[' . type ']'  (19)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	.  error

	type  goto 20


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	listdecl : decl .  (3)

	.  reduce 3


state 10
	vblockdecl : vdecl . ';'  (9)

	';'  shift 21
	.  error


state 11
	decl : fdecl .  (6)

	.  reduce 6


state 12
	decl : vblockdecl .  (5)

	.  reduce 5


state 13
	file : listdecl .  (1)
	listdecl : listdecl . decl  (4)

	tINT  shift 1
	tREALTEXT  shift 2
	tPROCEDURE  shift 3
	tSTR  shift 4
	tPUBLIC  shift 5
	tUSE  shift 6
	'['  shift 7
	$end  reduce 1

	decl  goto 22
	vdecl  goto 10
	fdecl  goto 11
	vblockdecl  goto 12
	type  goto 14


state 14
	vdecl : type . tIDENTIFIER  (11)
	vdecl : type . tIDENTIFIER '=' expr  (14)
	fdecl : type . tIDENTIFIER '(' fargs ')'  (45)
	fdecl : type . tIDENTIFIER '(' fargs ')' block  (51)
	fdecl : type . tIDENTIFIER '(' fargs ')' '=' literal block  (55)

	tIDENTIFIER  shift 23
	.  error


state 15
	fdecl : tPROCEDURE tIDENTIFIER . '(' fargs ')'  (48)
	fdecl : tPROCEDURE tIDENTIFIER . '(' fargs ')' block  (53)

	'('  shift 24
	.  error


state 16
	fdecl : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fargs ')'  (49)
	fdecl : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fargs ')' block  (54)

	tIDENTIFIER  shift 25
	.  error


state 17
	vdecl : tPUBLIC type . tIDENTIFIER  (10)
	vdecl : tPUBLIC type . tIDENTIFIER '=' expr  (13)
	fdecl : tPUBLIC type . tIDENTIFIER '(' fargs ')'  (46)
	fdecl : tPUBLIC type . tIDENTIFIER '(' fargs ')' block  (52)
	fdecl : tPUBLIC type . tIDENTIFIER '(' fargs ')' '=' literal block  (56)

	tIDENTIFIER  shift 26
	.  error


state 18
	fdecl : tUSE tPROCEDURE . tIDENTIFIER '(' fargs ')'  (50)

	tIDENTIFIER  shift 27
	.  error


state 19
	vdecl : tUSE type . tIDENTIFIER  (12)
	vdecl : tUSE type . tIDENTIFIER '=' expr  (15)
	fdecl : tUSE type . tIDENTIFIER '(' fargs ')'  (47)

	tIDENTIFIER  shift 28
	.  error


state 20
	type : '[' type . ']'  (19)

	']'  shift 29
	.  error


state 21
	vblockdecl : vdecl ';' .  (9)

	.  reduce 9


state 22
	listdecl : listdecl decl .  (4)

	.  reduce 4


state 23
	vdecl : type tIDENTIFIER .  (11)
	vdecl : type tIDENTIFIER . '=' expr  (14)
	fdecl : type tIDENTIFIER . '(' fargs ')'  (45)
	fdecl : type tIDENTIFIER . '(' fargs ')' block  (51)
	fdecl : type tIDENTIFIER . '(' fargs ')' '=' literal block  (55)

	'='  shift 30
	'('  shift 31
	';'  reduce 11


state 24
	fdecl : tPROCEDURE tIDENTIFIER '(' . fargs ')'  (48)
	fdecl : tPROCEDURE tIDENTIFIER '(' . fargs ')' block  (53)
	fargs : .  (94)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	')'  reduce 94

	arg  goto 32
	fargs  goto 33
	args  goto 34
	type  goto 35


state 25
	fdecl : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fargs ')'  (49)
	fdecl : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fargs ')' block  (54)

	'('  shift 36
	.  error


state 26
	vdecl : tPUBLIC type tIDENTIFIER .  (10)
	vdecl : tPUBLIC type tIDENTIFIER . '=' expr  (13)
	fdecl : tPUBLIC type tIDENTIFIER . '(' fargs ')'  (46)
	fdecl : tPUBLIC type tIDENTIFIER . '(' fargs ')' block  (52)
	fdecl : tPUBLIC type tIDENTIFIER . '(' fargs ')' '=' literal block  (56)

	'='  shift 37
	'('  shift 38
	';'  reduce 10


state 27
	fdecl : tUSE tPROCEDURE tIDENTIFIER . '(' fargs ')'  (50)

	'('  shift 39
	.  error


state 28
	vdecl : tUSE type tIDENTIFIER .  (12)
	vdecl : tUSE type tIDENTIFIER . '=' expr  (15)
	fdecl : tUSE type tIDENTIFIER . '(' fargs ')'  (47)

	'='  shift 40
	'('  shift 41
	';'  reduce 12


state 29
	type : '[' type ']' .  (19)

	.  reduce 19


state 30
	vdecl : type tIDENTIFIER '=' . expr  (14)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 53
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 31
	fdecl : type tIDENTIFIER '(' . fargs ')'  (45)
	fdecl : type tIDENTIFIER '(' . fargs ')' block  (51)
	fdecl : type tIDENTIFIER '(' . fargs ')' '=' literal block  (55)
	fargs : .  (94)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	')'  reduce 94

	arg  goto 32
	fargs  goto 58
	args  goto 34
	type  goto 35


state 32
	args : arg .  (95)

	.  reduce 95


state 33
	fdecl : tPROCEDURE tIDENTIFIER '(' fargs . ')'  (48)
	fdecl : tPROCEDURE tIDENTIFIER '(' fargs . ')' block  (53)

	')'  shift 59
	.  error


state 34
	fargs : args .  (93)
	args : args . ',' arg  (96)

	','  shift 60
	')'  reduce 93


state 35
	arg : type . tIDENTIFIER  (97)

	tIDENTIFIER  shift 61
	.  error


state 36
	fdecl : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fargs ')'  (49)
	fdecl : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fargs ')' block  (54)
	fargs : .  (94)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	')'  reduce 94

	arg  goto 32
	fargs  goto 62
	args  goto 34
	type  goto 35


state 37
	vdecl : tPUBLIC type tIDENTIFIER '=' . expr  (13)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 63
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 38
	fdecl : tPUBLIC type tIDENTIFIER '(' . fargs ')'  (46)
	fdecl : tPUBLIC type tIDENTIFIER '(' . fargs ')' block  (52)
	fdecl : tPUBLIC type tIDENTIFIER '(' . fargs ')' '=' literal block  (56)
	fargs : .  (94)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	')'  reduce 94

	arg  goto 32
	fargs  goto 64
	args  goto 34
	type  goto 35


state 39
	fdecl : tUSE tPROCEDURE tIDENTIFIER '(' . fargs ')'  (50)
	fargs : .  (94)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	')'  reduce 94

	arg  goto 32
	fargs  goto 65
	args  goto 34
	type  goto 35


state 40
	vdecl : tUSE type tIDENTIFIER '=' . expr  (15)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 66
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 41
	fdecl : tUSE type tIDENTIFIER '(' . fargs ')'  (47)
	fargs : .  (94)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	')'  reduce 94

	arg  goto 32
	fargs  goto 67
	args  goto 34
	type  goto 35


state 42
	literal : tINTEGER .  (57)

	.  reduce 57


state 43
	literal : tREAL .  (59)

	.  reduce 59


state 44
	funcinvoc : tIDENTIFIER . '(' fargsinvo ')'  (87)
	funcinvoc : tIDENTIFIER . '(' ')'  (88)
	lval : tIDENTIFIER .  (91)

	'('  shift 68
	tPRINTLN  reduce 91
	'='  reduce 91
	'|'  reduce 91
	'&'  reduce 91
	tEQ  reduce 91
	tNE  reduce 91
	tGE  reduce 91
	tLE  reduce 91
	'>'  reduce 91
	'<'  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	'%'  reduce 91
	'['  reduce 91
	';'  reduce 91
	']'  reduce 91
	'!'  reduce 91
	')'  reduce 91
	':'  reduce 91
	'?'  reduce 91
	','  reduce 91


state 45
	lstring : tSTRING .  (61)

	.  reduce 61


state 46
	literal : tNULL .  (60)

	.  reduce 60


state 47
	expr : '~' . expr  (75)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 69
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 48
	expr : '+' . expr  (65)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 70
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 49
	expr : '-' . expr  (64)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 71
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 50
	expr : '[' . expr ']'  (82)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 72
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 51
	expr : '(' . expr ')'  (81)

	tINTEGER  shift 42
	tREAL  shift 43
	tIDENTIFIER  shift 44
	tSTRING  shift 45
	tNULL  shift 46
	'~'  shift 47
	'+'  shift 48
	'-'  shift 49
	'['  shift 50
	'('  shift 51
	'@'  shift 52
	.  error

	expr  goto 73
	literal  goto 54
	funcinvoc  goto 55
	lval  goto 56
	lstring  goto 57


state 52
	expr : '@' .  (80)

	.  reduce 80


state 53
	vdecl : type tIDENTIFIER '=' expr .  (14)
	expr : expr . '+' expr  (66)
	expr : expr . '-' expr  (67)
	expr : expr . '*' expr  (68)
	expr : expr . '/' expr  (69)
	expr : expr . '%' expr  (70)
	expr : expr . '<' expr  (71)
	expr : expr . '>' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '|' expr  (74)
	expr : expr . tGE expr  (76)
	expr : expr . tLE expr  (77)
	expr : expr . tNE expr  (78)
	expr : expr . tEQ expr  (79)
	lval : expr . '[' expr ']'  (92)

	'|'  shift 74
	'&'  shift 75
	tEQ  shift 76
	tNE  shift 77
	tGE  shift 78
	tLE  shift 79
	'>'  shift 80
	'<'  shift 81
	'+'  shift 82
	'-'  shift 83
	'*'  shift 84
	'/'  shift 85
	'%'  shift 86
	'['  shift 87
	';'  reduce 14


state 54
	expr : literal .  (63)

	.  reduce 63


state 55
	expr : funcinvoc .  (86)

	.  reduce 86


state 56
	expr : lval .  (83)
	expr : lval . '?'  (84)
	expr : lval . '=' expr  (85)

	'='  shift 88
	'?'  shift 89
	tPRINTLN  reduce 83
	'|'  reduce 83
	'&'  reduce 83
	tEQ  reduce 83
	tNE  reduce 83
	tGE  reduce 83
	tLE  reduce 83
	'>'  reduce 83
	'<'  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'['  reduce 83
	';'  reduce 83
	']'  reduce 83
	'!'  reduce 83
	')'  reduce 83
	':'  reduce 83
	','  reduce 83


state 57
	literal : lstring .  (58)
	lstring : lstring . tSTRING  (62)

	tSTRING  shift 90
	tPRINTLN  reduce 58
	'|'  reduce 58
	'&'  reduce 58
	tEQ  reduce 58
	tNE  reduce 58
	tGE  reduce 58
	tLE  reduce 58
	'>'  reduce 58
	'<'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	'%'  reduce 58
	'['  reduce 58
	';'  reduce 58
	']'  reduce 58
	'!'  reduce 58
	')'  reduce 58
	':'  reduce 58
	'{'  reduce 58
	','  reduce 58


state 58
	fdecl : type tIDENTIFIER '(' fargs . ')'  (45)
	fdecl : type tIDENTIFIER '(' fargs . ')' block  (51)
	fdecl : type tIDENTIFIER '(' fargs . ')' '=' literal block  (55)

	')'  shift 91
	.  error


state 59
	fdecl : tPROCEDURE tIDENTIFIER '(' fargs ')' .  (48)
	fdecl : tPROCEDURE tIDENTIFIER '(' fargs ')' . block  (53)

	'{'  shift 92
	$end  reduce 48
	tINT  reduce 48
	tREALTEXT  reduce 48
	tPROCEDURE  reduce 48
	tSTR  reduce 48
	tPUBLIC  reduce 48
	tUSE  reduce 48
	'['  reduce 48

	block  goto 93


state 60
	args : args ',' . arg  (96)

	tINT  shift 1
	tREALTEXT  shift 2
	tSTR  shift 4
	'['  shift 7
	.  error

	arg  goto 94
	type  goto 35


state 61
	arg : type tIDENTIFIER .  (97)
